[FIXED] Blog post overflow in mobile.

--- a/src/assets/css/blog.less
+++ b/src/assets/css/blog.less
@@ -2,6 +2,7 @@
   max-width: 742px;
   margin: 0 auto;
   padding: 16px 0;
+  overflow: hidden;
   .featured-img {
     border-radius: 8px;
   }
